third_party/rust/pin-project/tests/ui/unstable-features/overlapping_marker_traits-feature-gate.stderr
error[E0119]: conflicting implementations of trait `std::marker::Unpin` for type `Struct<_>`
  --> tests/ui/unstable-features/overlapping_marker_traits-feature-gate.rs:6:1
   |
6  | #[pin_project] //~ ERROR E0119
   | ^^^^^^^^^^^^^^ conflicting implementation for `Struct<_>`
...
13 | impl<T> Unpin for Struct<T> {}
   | --------------------------- first implementation here
   |
   = note: this error originates in the derive macro `::pin_project::__private::__PinProjectInternalDerive` (in Nightly builds, run with -Z macro-backtrace for more info)
